--- a/main.Rmd
+++ b/main.Rmd
@@ -50,12 +50,7 @@ theme_set(theme_bw(base_size=12)+
   panel.grid.minor = element_blank()))
 
 # Plot a random sample over time
-time = seq(1, 178)
-x_t <- data.frame(t(x))
-x_t$time = time
-col = floor(runif(1, min=1, max = 179))
-ggplot(x_t, aes(x=time, y=x_t[,col]))+
-  geom_line(colour = 'dodgerblue', size = 1)
+plot_rand_sample(x)
 
 ```
 
@@ -63,20 +58,8 @@ ggplot(x_t, aes(x=time, y=x_t[,col]))+
 # Perform PCA
 pca <- prcomp(x, center = TRUE, scale=FALSE)
 
-pca.var <- pca$sdev^2
-pca.var.per <- round(pca.var/sum(pca.var)*100, 1)
-barplot(pca.var.per, main="PCA plot", xlab="Principal component", ylab='Percent variation')
-
-pca.data <- data.frame(Sample=y, X = pca$x[,1], Y = pca$x[,2])
-
-ggplot(data = pca.data, aes(x=X, y=Y, label = Sample, color = factor(Sample))) +
-  geom_point() +
-  xlab(paste("PC1 - ", pca.var.per[1], "%", sep="")) +
-  ylab(paste("PC2 - ", pca.var.per[2], "%", sep="")) +
-  theme_bw() +
-  ggtitle("PCA plot")
-
-
+# Plot PCA
+plot_pca(pca)
 
 # Remove the sample with class 70
 x <- x[y != 70,]
@@ -84,47 +67,23 @@ y <- y[y != 70]
 
 ```
 
-```{r Normalisation}
-
-long = melt(x, id.vars = 0)
-
+```{r Plot_data}
 # Create density plot of unnormalised data
-ggplot(long, aes (value)) +
-  geom_density() +
-  ggtitle("Data distribution (unnormalised)")
-
-# Normalise: mean-center
-# Scale: Unit variance scaling
-preproc <- preProcess(x, method=c('center', 'scale'))
-#preproc <- preProcess(x, method=c('center'))
-x <- predict(preproc, x)
-
-long_norm = melt(x, id.vars = 0)
-
-# Create density plot of normalised data
-ggplot(long_norm, aes (value)) +
-  geom_density() +
-  ggtitle("Data distribution (normalised)")
-
+plot_dens(x, "Data distribution (not pre-processed)")
 
 # Make violin plots for the different classes
-data_full <- x
-data_full$y <- y
-res <- melt(data_full, id.vars='y')
+plot_violin(x, y, title = "violin plot for all classes (not pre-processed)")
 
-# cReate The violin plots
-ggplot(res, aes(x = y, y = value, group = y))+
-  geom_violin()+
-  ggtitle("Violin plot of the different classes")
+# Create boxplots
+plot_boxplot(x, y)
+```
 
-ggplot(res, aes(x = y, y = value, group=y))+
-  geom_boxplot()+
-  ggtitle("boxplot of the different classes")+
-  xlim(1, 6)
 
-ggplot(long, aes(x = variable, y = value))+
-  geom_boxplot()+
-  ggtitle("Boxplot of entire dat set")
+```{r Preprocessing}
+
+# Mean center and scale (divide by stdev) the data
+#preproc <- preProcess(x, method=c('center', 'scale'))
+#x <- predict(preproc, x)
 
 # Get rid of the most extreme outlier
 row_max <- which(x == max(x), arr.ind = TRUE)[1]
@@ -144,57 +103,29 @@ for(i in seq(1, 178)){
   x <- x[x[names(x)[i]] <= uplim & x[names(x)[i]] >= downlim,]
 }
 
+# mean-center: Set mean of each variable to 0
+# Scale: Unit variance scaling
+preproc <- preProcess(x, method=c('center', 'scale'))
+x <- predict(preproc, x)
+
 # Min Max normalisation
 for (col in colnames(x)){
   x[col] <- ((x[col] - min(x[col])) / (max(x[col]) - min(x[col])))
 }
 
-# Repteated plots!!!!!!
-long = melt(x, id.vars = 0)
-
-# Create density plot of unnormalised data
-ggplot(long, aes (value)) +
-  geom_density() +
-  ggtitle("Data distribution (unnormalised)")
-
-# Transformation:
-# mean-center: Set mean of each variable to 0
-# Scale: Unit variance scaling
-preproc <- preProcess(x, method=c('center', 'scale'))
-preproc <- preProcess(x, method=c('center'))
-x <- predict(preproc, x)
-
-long_norm = melt(x, id.vars = 0)
-
-# Create density plot of normalised data
-ggplot(long_norm, aes (value)) +
-  geom_density() +
-  ggtitle("Data distribution (normalised)")
-
-
-# Make violin plots for the different classes
-data_full <- x
-data_full$y <- y
-res <- melt(data_full, id.vars='y')
-
-# cReate The violin plots
-ggplot(res, aes(x = y, y = value, group = y))+
-  geom_violin()+
-  ggtitle("Violin plot of the different classes")
-
-ggplot(res, aes(x = y, y = value, group=y))+
-  geom_boxplot()+
-  ggtitle("boxplot of the different classes")+
-  scale_x_discrete(name ="Class", 
-                    limits=factor(c(1, 2, 3, 4, 5)))
-  
-
-ggplot(long, aes(x = variable, y = value))+
-  geom_boxplot()+
-  ggtitle("Boxplot of entire dat set") +
-  theme(axis.text.x = element_blank(), axis.ticks = element_blank())
 ```
 
+
+```{r Plot_data}
+# Create density plot of unnormalised data
+plot_dens(x, "Data distribution (pre-processed)")
+
+# Make violin plots for the different classes
+plot_violin(x, y, title = "violin plot for all classes (not pre-processed)")
+
+# Create boxplots
+plot_boxplot(x, y)
+```
 
 
 ``` {r distance, message=FALSE}
@@ -243,6 +174,7 @@ PCA_euc <- ggplot(data = pca.data, aes(x=X, y=Y, label = Sample, color = factor(
                   xlab(paste("PC1 - ", pca.var.per[1], "%", sep="")) +
                   ylab(paste("PC2 - ", pca.var.per[2], "%", sep="")) +
                   theme_bw() +
+                  coord_fixed(1) +
                   ggtitle("PCA plot - Euclidean distance")
 PCA_euc
 ggsave("Figures/PCA Euclidean distance.png", plot = PCA_euc, device = 'png', dpi=1200)
